--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         designs and data sources, including natural experiments, large-scale surveys and administrative data.</p>
 
       <p>Previously, I was a Postdoctoral Fellow at the Center for the Study of Democratic Politics at <a
-          href="https://csdp.princeton.edu/">Princeton University</a>. I graduaded with a PhD from the Department of
+          href="https://csdp.princeton.edu/">Princeton University</a>. I graduated with a PhD from the Department of
         Government at <a href="https://gov.harvard.edu/">Harvard University</a> in
         2022. </p>
 
@@ -98,6 +98,33 @@
       </div>
       <p>
       <ol reversed>
+        <li>
+          <b><a href="https://osf.io/preprints/osf/876dr">The Green Transition and Political Polarization Along
+              Occupational Lines</a></b>
+          (with Vincent Heddesheimer and Erik Voeten). Conditionally Accepted, <i>American Political Science Review.</i>
+          <i><a href="#" onclick="toggle_visibility('greentransition');">[Abstract]</a></i>
+          <div id="greentransition" style="display:none;"><br>
+            Green transition policies set long-term targets to reduce carbon emissions and other pollutants, posing a
+            threat
+            to workers in polluting occupations and communities reliant on these occupations. Can far-right parties
+            attract
+            voters who anticipate losing from the green transition? We explore this in Germany, which has ambitious
+            green
+            policies and a large workforce in polluting occupations. The far-right AfD started campaigning as the only
+            party
+            opposing green transition policies in 2016. Using a difference-in-differences design, we show AfD support
+            increased in counties with more polluting jobs after this platform change. A panel survey further
+            demonstrates
+            that individuals in these occupations also shifted towards the AfD. Probing mechanisms, we find suggestive
+            evidence that growing far-right support is due to changing perceptions of social stigma and lower status.
+            Our
+            results highlight the need for a new research agenda on a backlash against the normative dimension of the
+            green
+            transition.
+          </div>
+          &nbsp;
+        </li>
+
         <li>
           <b><a href="https://osf.io/preprints/osf/hgc2z">Biased Party Nominations as a Source of Women's Electoral
               Underperformance</a></b>
@@ -154,7 +181,7 @@
         <li>
           <b><a href="https://doi.org/10.1093/jrsssa/qnaf042">Estimating controlled direct effects with panel data: an
               application to reducing support for discriminatory policies</a></b>
-          (with Matthew Blackwell, Adam Glynn, and Connor Halloran Phillips). Forthcoming, <i>Journal of the Royal
+          (with Matthew Blackwell, Adam Glynn, and Connor Phillips). Forthcoming, <i>Journal of the Royal
             Statistical Society: Series A.</i>
           <i><a href="#" onclick="toggle_visibility('did');">[Abstract]</a></i>
           <div id="did" style="display:none;"><br>
@@ -545,28 +572,22 @@
       <ol start="1">
 
         <li>
-          <b><a href="https://osf.io/preprints/osf/876dr">The Green Transition and Political Polarization Along
-              Occupational Lines</a></b>
-          (with Vincent Heddesheimer and Erik Voeten). Revise & Resubmit, <i>American Political Science Review.</i>
-          <i><a href="#" onclick="toggle_visibility('greentransition');">[Abstract]</a></i>
-          <div id="greentransition" style="display:none;"><br>
-            Green transition policies set long-term targets to reduce carbon emissions and other pollutants, posing a
-            threat
-            to workers in polluting occupations and communities reliant on these occupations. Can far-right parties
-            attract
-            voters who anticipate losing from the green transition? We explore this in Germany, which has ambitious
-            green
-            policies and a large workforce in polluting occupations. The far-right AfD started campaigning as the only
-            party
-            opposing green transition policies in 2016. Using a difference-in-differences design, we show AfD support
-            increased in counties with more polluting jobs after this platform change. A panel survey further
-            demonstrates
-            that individuals in these occupations also shifted towards the AfD. Probing mechanisms, we find suggestive
-            evidence that growing far-right support is due to changing perceptions of social stigma and lower status.
-            Our
-            results highlight the need for a new research agenda on a backlash against the normative dimension of the
-            green
-            transition.
+          <b><a href="https://osf.io/preprints/osf/6s8tn_v2">Political Debates and the Integration of Ukrainian Refugees
+              in Germany</a></b>
+          (with Florian Sichart and Georgiy Syunyaev).
+          <i><a href="#" onclick="toggle_visibility('ukrainian');">[Abstract]</a></i>
+          <div id="ukrainian" style="display:none;"><br>
+            Amid refugee movements from conflict zones like Syria, South Sudan, and Ukraine, refugee integration is a
+            pressing concern. Previous research highlights how domestic policies and rhetoric can shape refugee
+            integration. Less is known about the impact of host-country rhetoric on military support for refugees'
+            countries of origin, even though such debates may signal societal acceptance or rejection. We study whether
+            such debates affect how refugees perceive their host societies in the case of Ukrainian refugees in Germany
+            after Russia's full-scale invasion. In a survey experiment, we exposed participants to statements from
+            German politicians with different levels of opposition to military aid to Ukraine. Although exposure to
+            opposition statements shifted refugees' perceptions of Germany's military support, it did not significantly
+            affect overall views of Germany's support for Ukrainian refugees, sense of belonging, or return intentions.
+            Exploring mechanisms, we find suggestive evidence that a decrease in salience of the debate over time
+            explains why we observe no downstream effects.
           </div>
           &nbsp;
         </li>
