--- a/index.html
+++ b/index.html
@@ -70,12 +70,13 @@
       </h3>
 
 
-      <p>I am an Assistant Professor of Political Science at the University of California, Davis. My research lies at
-        the
-        intersection of Comparative Politics and Political Economy. My work examines how structural economic
-        transformations—such as shifting labor markets, the housing crisis, and
-        the energy transition—reshape politics in advanced democracies. I study how these changes affect voter
-        preferences, the policymaking process, and democratic institutions. My work leverages a range of
+      <p>I am an Assistant Professor of Political Science at the University of California, Davis. My research
+        investigates the
+        relationship between economic change, voter behavior and policy responses in advanced democracies. I examine how
+        citizens and electoral
+        politics respond to major structural shifts, with a primary focus on disruptions in labor markets, the green
+        transition,
+        and persistent regional inequality. My work leverages a range of
         research
         designs and data sources, including natural experiments, large-scale surveys and administrative data.</p>
 
@@ -84,8 +85,6 @@
         Government at <a href="https://gov.harvard.edu/">Harvard University</a> in
         2022. </p>
 
-      <p> During the summer of 2025, I am a visiting researcher at Humboldt University in Berlin. Please contact me if
-        you are in Berlin or passing through.</p>
 
 
       <p>
@@ -257,7 +256,8 @@
         </li>
 
         <li>
-          <b><a href="https://osf.io/kwjem/">Does Rent Control Turn Tenants Into NIMBYs?</a></b>
+          <b><a href="https://www.journals.uchicago.edu/doi/abs/10.1086/738581">Does Rent Control Turn Tenants Into
+              NIMBYs?</a></b>
           (with Anselm Hager and Robert Vief). Forthcoming, <i>Journal of Politics.</i>
           <i><a href="#" onclick="toggle_visibility('nimby');">[Abstract]</a></i>
           <div id="nimby" style="display:none;"><br>
@@ -572,6 +572,41 @@
       <ol start="1">
 
         <li>
+          <b><a href="https://osf.io/preprints/socarxiv/6h8cq">Place-Based Policies, Local Responses, and Electoral
+              Behavior</a></b>
+          (with Vincent Heddesheimer and Andreas Wiedemann).
+          <i><a href="#" onclick="toggle_visibility('placebased');">[Abstract]</a></i>
+          <div id="placebased" style="display:none;"><br>
+            Place-based economic policies are increasingly seen as instruments to counter political discontent in
+            economically-depressed regions. Do regional investment subsidies affect electoral behavior? We evaluate this
+            question in the context of Germany's largest regional investment program. Our identification strategy
+            leverages a
+            2014 subsidy rate cut for manufacturing firms that—due to EU rules—was exogenous to local economic trends.
+            The
+            subsidy cut reduced voting for the far-right AfD and increased support for the incumbent Christian
+            Democrats. We
+            then demonstrate that subsidy cuts trigger two counterreactions: local firms invest more in human capital
+            and
+            local governments invest more in infrastructure and public goods. We argue that these dynamics signal to
+            voters
+            that local governments are responsive and care about their constituents, undermining populist appeals. Our
+            findings suggest that political consequences of place-based policies—and austerity more broadly—cannot be
+            understood without considering counteractions by local firms and governments.
+          </div>
+          &nbsp;
+        </li>
+
+        <li>
+          <b>Voter Responses to Climate Adaptation in High-Risk Communities</b>
+          (with Christian Baehr and António Valentim). (draft available upon request)
+        </li>
+
+        <li>
+          <b>Long-run Political Change after the Great Recession</b>
+          (with Vincent Heddesheimer). (draft available upon request)
+        </li>
+
+        <li>
           <b><a href="https://osf.io/preprints/osf/6s8tn_v2">Political Debates and the Integration of Ukrainian Refugees
               in Germany</a></b>
           (with Florian Sichart and Georgiy Syunyaev).
@@ -613,36 +648,6 @@
         </li>
 
         <li>
-          <b><a href="https://osf.io/preprints/socarxiv/6h8cq">Place-Based Policies, Local Responses, and Electoral
-              Behavior</a></b>
-          (with Vincent Heddesheimer and Andreas Wiedemann).
-          <i><a href="#" onclick="toggle_visibility('placebased');">[Abstract]</a></i>
-          <div id="placebased" style="display:none;"><br>
-            Place-based economic policies are increasingly seen as instruments to counter political discontent in
-            economically-depressed regions. Do regional investment subsidies affect electoral behavior? We evaluate this
-            question in the context of Germany's largest regional investment program. Our identification strategy
-            leverages a
-            2014 subsidy rate cut for manufacturing firms that—due to EU rules—was exogenous to local economic trends.
-            The
-            subsidy cut reduced voting for the far-right AfD and increased support for the incumbent Christian
-            Democrats. We
-            then demonstrate that subsidy cuts trigger two counterreactions: local firms invest more in human capital
-            and
-            local governments invest more in infrastructure and public goods. We argue that these dynamics signal to
-            voters
-            that local governments are responsive and care about their constituents, undermining populist appeals. Our
-            findings suggest that political consequences of place-based policies—and austerity more broadly—cannot be
-            understood without considering counteractions by local firms and governments.
-          </div>
-          &nbsp;
-        </li>
-
-        <li>
-          <b>Long-run Political Change after the Great Recession</b>
-          (with Vincent Heddesheimer). (draft available upon request)
-        </li>
-
-        <li>
           <b><a href="https://wzb-ipi.github.io/corona/WD_paper.pdf">Political and Social Correlates of Covid-19
               Mortality</a></b>
           (with Constantin Manuel Bosancianu, Macartan Humphreys, Sampada KC, Nils Lieber, and Alex Scacco).
@@ -676,13 +681,25 @@
       </ol>
       </p>
 
-
+      <div align="left">
+        <h3>Public Engagement and Policy Reports</h3>
+      </div>
+      <p>
+      <ol start="1">
+        <li>
+          <b><a
+              href="https://capolicylab.org/navigating-californias-wildfire-insurance-challenge-community-demographics-and-the-fair-plan/">Navigating
+              California's Wildfire Insurance Challenge: Community Demographics and the FAIR Plan</a></b>
+          (with L. Hen and M. Macaraeg). 2025. California Policy Lab, University of California.
+        </li>
+      </ol>
+      </p>
 
     </section>
     <footer>
       <p><small> This website is based on the Github <a href="https://github.com/orderedlist/minimal">minimal theme</a>
-          and is inspired by the website of Shiro Kuriwaki</a>.
-          </a></small></p>
+          and is inspired by the website of <a href="https://shirokuriwaki.com/">Shiro Kuriwaki</a>.
+        </small></p>
     </footer>
   </div>
   <script src="javascripts/scale.fix.js"></script>
