--- a/index.html
+++ b/index.html
@@ -607,22 +607,22 @@
         </li>
 
         <li>
-          <b><a href="https://osf.io/preprints/osf/6s8tn_v2">Political Debates and the Integration of Ukrainian Refugees
-              in Germany</a></b>
+          <b><a href="https://osf.io/preprints/osf/6s8tn_v4">Foreign Policy Debates Shape Refugees' Psychological
+              Integration</a></b>
           (with Florian Sichart and Georgiy Syunyaev).
           <i><a href="#" onclick="toggle_visibility('ukrainian');">[Abstract]</a></i>
           <div id="ukrainian" style="display:none;"><br>
-            Amid refugee movements from conflict zones like Syria, South Sudan, and Ukraine, refugee integration is a
-            pressing concern. Previous research highlights how domestic policies and rhetoric can shape refugee
-            integration. Less is known about the impact of host-country rhetoric on military support for refugees'
-            countries of origin, even though such debates may signal societal acceptance or rejection. We study whether
-            such debates affect how refugees perceive their host societies in the case of Ukrainian refugees in Germany
-            after Russia's full-scale invasion. In a survey experiment, we exposed participants to statements from
-            German politicians with different levels of opposition to military aid to Ukraine. Although exposure to
-            opposition statements shifted refugees' perceptions of Germany's military support, it did not significantly
-            affect overall views of Germany's support for Ukrainian refugees, sense of belonging, or return intentions.
-            Exploring mechanisms, we find suggestive evidence that a decrease in salience of the debate over time
-            explains why we observe no downstream effects.
+            Refugee integration is a central policy challenge. Expanding on prior research on policy debates targeting
+            immigrants, we examine whether host country debates about military aid to refugees' homeland shape their
+            psychological integration. In a survey experiment with 2,631 Ukrainian refugees in Germany, participants
+            viewed authentic statements by German politicians expressing varying levels of support for military aid. On
+            average, these messages had no detectable effect. Yet, this null masks important heterogeneity. By linking
+            our experiment to daily variation in national news coverage, we find that when ambient media salience is
+            low, exposure to any political statement on military aid---supportive or opposing---reduces psychological
+            integration. These effects vanish when the issue is already prominent in the media. We argue that this
+            pattern reflects a contestation mechanism: refugees interpret the very visibility of political debate,
+            rather than its specific content, as a signal that host-country support is contested and potentially less
+            secure.
           </div>
           &nbsp;
         </li>
